implement service in auth  module

--- a/src/app/feature/auth/component/login/login.component.html
+++ b/src/app/feature/auth/component/login/login.component.html
@@ -35,7 +35,7 @@
            
             <div class="text-center text-lg-start mt-4 pt-2">
               
-                <button type="submit" class="btn btn-primary" (click)="loginData(this.loginform.value.email,this.loginform.value.password)">Login</button>
+                <button type="submit" class="btn btn-primary" (click)="loginData()">Login</button>
               <p class="small fw-bold mt-2 pt-1 mb-0">{{ doaccount}}<a href="" routerLink="" class="link-danger">{{register}}</a>
               </p>
             </div>
