--- a/src/app/feature/auth/component/signup/signup.component.html
+++ b/src/app/feature/auth/component/signup/signup.component.html
@@ -117,7 +117,7 @@
                     <div class="text-center text-lg-start mt-4 pt-2">
 
                         <button type="submit" class="btn btn-primary btn-lg btn-block"
-                            (click)="signupData(this.signupform.value.email,this.signupform.value.password)">Signup</button>
+                            (click)="signupData()">Signup</button>
 
 
                     </div>
